# i-hate-group-chats

./: .env.template  .gitignore  README.md  makefile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
ci/: runTests.sh
ihgc/data_models/: conversation.py
ihgc/integrations/: fb_integration.py
ihgc/training/: data_extraction.py
tests/integration/: test_fb_integration.py
tests/unit/: test_models.py
